--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -86,6 +86,6 @@ jobs:
             script: |
                 sudo docker rm fu-eureka
                 sudo docker pull minchogt/fu-eureka
-                docker-compose up -d fu-eureka
+                docker-compose up -d eureka
                 docker image prune -f
       
